--- a/backend/templates/signin.html
+++ b/backend/templates/signin.html
@@ -1,24 +1,73 @@
 <!-- templates/signin.html -->
 {% extends "layout.html" %} {% block title %}Sign In{% endblock %} {% block
 content %}
-<h2 class="text-2xl font-bold mb-4">Sign In</h2>
-<form method="POST" class="space-y-4">
-  <input
-    type="text"
-    name="nid"
-    placeholder="NID"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <input
-    type="password"
-    name="password"
-    placeholder="Password"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">
-    Sign In
-  </button>
-</form>
+<div class="h-screen">
+  <div
+    class="flex flex-1 flex-col justify-center px-6 py-12 lg:px-8 bg-white h-full"
+  >
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img alt="DVSUB" src="../static/imgs/images.png" class="mx-auto h-10 w-auto" />
+      <h2
+        class="mt-10 text-center text-2xl font-bold tracking-tight text-gray-900"
+      >
+        Sign in to your account
+      </h2>
+    </div>
+
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <form class="space-y-6" method="POST">
+        <div>
+          <label for="nid" class="block text-sm font-medium text-gray-900">
+            NID
+          </label>
+          <div class="mt-2">
+            <input
+              id="nid"
+              name="nid"
+              type="text"
+              required
+              autocomplete="username"
+              class="block w-full border border-gray-300 rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm"
+            />
+          </div>
+        </div>
+
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-900">
+            Password
+          </label>
+          <div class="mt-2">
+            <input
+              id="password"
+              name="password"
+              type="password"
+              required
+              autocomplete="current-password"
+              class="block w-full border border-gray-300 rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:outline-indigo-600 sm:text-sm"
+            />
+          </div>
+        </div>
+
+        <div>
+          <button
+            type="submit"
+            class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold text-white shadow hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-indigo-600"
+          >
+            Sign in
+          </button>
+        </div>
+      </form>
+
+      <p class="mt-10 text-center text-sm text-gray-500">
+        Don't have an account?
+        <a
+          href="/signup"
+          class="font-semibold text-indigo-600 hover:text-indigo-500"
+        >
+          Sign up
+        </a>
+      </p>
+    </div>
+  </div>
+</div>
 {% endblock %}
