--- a/backend/templates/signup.html
+++ b/backend/templates/signup.html
@@ -1,45 +1,88 @@
 <!-- templates/signup.html -->
 {% extends "layout.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
-<h2 class="text-2xl font-bold mb-4">Sign Up</h2>
-<form method="POST" class="space-y-4">
-  <input
-    type="text"
-    name="name"
-    placeholder="Full Name"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <input
-    type="text"
-    name="nid"
-    placeholder="NID"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <input
-    type="text"
-    name="wallet_address"
-    placeholder="Wallet Address"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <input
-    type="text"
-    name="private_key"
-    placeholder="Private Key"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <input
-    type="password"
-    name="password"
-    placeholder="Password"
-    class="w-full p-2 border rounded"
-    required
-  />
-  <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">
-    Sign Up
-  </button>
-</form>
+<div class="flex flex-col justify-center h-screen p-8 bg-white">
+  <div class="max-w-md w-full mx-auto border border-gray-300 rounded-2xl p-8">
+    <div class="text-center mb-12">
+      <a href="javascript:void(0)">
+        <img src="../static/imgs/images.png" alt="logo" class="w-20 inline-block" />
+      </a>
+    </div>
+
+    <form method="POST">
+      <div class="space-y-6">
+        <div class="name-container flex flex-col space-y-2">
+          <label class="text-slate-900 text-sm font-medium mb-2 block">
+            Enter Your Full Name
+          </label>
+          <input
+            type="text"
+            name="name"
+            placeholder="Full Name"
+            class="w-full p-2 border rounded"
+            required
+          />
+        </div>
+        <div>
+          <label class="text-slate-900 text-sm font-medium mb-2 block">
+            Enter Your NID number
+          </label>
+          <input
+            type="text"
+            name="nid"
+            placeholder="NID"
+            class="w-full p-2 border rounded"
+            required
+          />
+        </div>
+        <!-- Password -->
+        <div>
+          <label class="text-slate-900 text-sm font-medium mb-2 block">
+            Password
+          </label>
+          <input
+            name="password"
+            type="password"
+            class="text-slate-900 bg-white border border-gray-300 w-full text-sm px-4 py-3 rounded-md outline-blue-500"
+            placeholder="Enter password"
+          />
+        </div>
+
+        <!-- Confirm Password -->
+        <div>
+          <label class="text-slate-900 text-sm font-medium mb-2 block">
+            Confirm Password
+          </label>
+          <input
+            name="cpassword"
+            type="password"
+            class="text-slate-900 bg-white border border-gray-300 w-full text-sm px-4 py-3 rounded-md outline-blue-500"
+            placeholder="Enter confirm password"
+          />
+        </div>
+      </div>
+
+      <!-- Submit -->
+      <div class="mt-12">
+        <button
+          type="submit"
+          class="w-full py-3 px-4 text-sm tracking-wider font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none cursor-pointer"
+        >
+          Create an account
+        </button>
+      </div>
+
+      <!-- Already have account -->
+      <p class="text-slate-600 text-sm mt-6 text-center">
+        Already have an account?
+        <a
+          href="/signin"
+          class="text-indigo-600 font-medium hover:underline ml-1"
+        >
+          Login here
+        </a>
+      </p>
+    </form>
+  </div>
+</div>
 {% endblock %}
