--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -42,7 +42,7 @@
               >Elections</a
             >
             <a
-              href="/result"
+              href="/results"
               class="text-black px-3 py-2 rounded-md text-sm font-medium hover:text-indigo-600"
               >Results</a
             >
@@ -110,7 +110,7 @@
           >Elections</a
         >
         <a
-          href="/result"
+          href="/results"
           class="block px-3 py-2 text-base font-medium text-black hover:text-indigo-600"
           >Results</a
         >
